// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid /> Debe de mostrar el componente <GifGrid/> correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__pulse"
  >
    Shiryu
  </h3>
  <p
    className="animate__animated animate__fadeIn"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid /> Debe de mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__pulse"
  >
    Shiryu
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="id"
      key="id"
      title="Hola Mundo"
      url="http://localhost/image.jpg"
    />
  </div>
</Fragment>
`;
